service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ward-module-service
spec:
  selector:
    app: ward-module
  type: NodePort
  ports:
  - protocol: TCP
    port: 9191
    targetPort: 9191
